2005-06-28  Don Allingham  <don@gramps-project.org>
	* src/EditPerson.py: parse date correctly on edit
	* src/ReadGedcom.py: load previously used title properly into
	the dictionary to prevent traceback

2005-06-27  Don Allingham  <don@gramps-project.org>
	* src/PeopleView.py: fix on_get_iter on delete person

2005-06-27  Julio Sanchez  <jsanchez@users.sourceforge.net>
	* src/po/es.po: Translation fixes
	* src/GenericFilter.py: Do not attempt to translate user filters,
	fix a problem with filter names that contain non-ASCII characters

2005-06-26  Don Allingham  <don@gramps-project.org>
	* src/ImageSelect.py: allow the path variable to be editable
	* src/gramps.glade: allow the path variable to be editable
	* src/PeopleView.py: partial implementation of the alexrithm to
	select a new person after a person has been deleted
	* src/const.py.in: fix confidence display
	* src/ReadXML.py: prevent duplicate place names on import
	* src/ReadGedcom.py: prevent duplicate place names on import

2005-06-26  Julio Sanchez  <jsanchez@users.sourceforge.net>
	* src/GenericFilter.py: Fix uninitialized ancestor_cache in
	HasCommonAncestorWithFilterMatch, fix or-ing filters

2005-06-24  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/PeopleView.py (build_people_context_menu): Workaround to get a
	proper german translation.
	* srx/po/de.po: Updated

2005-06-24  Alexander Roitman  <shura@gramps-project.org>
	* src/po/fr.po: Add missing format line parameters.

2005-06-23  Don Allingham  <don@gramps-project.org>
	* src/WriteGedcom.py: Fix GEDCOM date exporting.

2005-06-23  Alex Roitman  <shura@gramps-project.org>
	* src/Relationship.py (is_spouse): Use context.
	* src/get_strings: Add "__" to default keywords.
	* src/po/template.po: Update for 2.0.4.
	* src/RelLib.py (SourceNote.replace_source_references,
	MediaBase.replace_media_references,): Fix problem with replacing
	multiple occurrences.
	* src/po/ru.po: Update for 2.0.4.
